<resources>
    <string name="app_name">Bookeet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="get_started">Get Started</string>
    <string name="bookeeping_and_more">Bookeeping and more</string>
    <string name="send_code">Send Code</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="enter_your_phone_number">Enter your phone number to login to your existing account or create a new account</string>
    <string name="phone_number">Phone number</string>
    <string name="_234">+234</string>
    <string name="verify_code">Verify Code</string>
    <string name="verification_code_sent">Verification Code Sent</string>
    <string name="enter_the_6_digits_verification">Enter the 6 digits verification code sent to through SMS</string>
    <string name="code">* * * * * *</string>
    <string name="resend_code">Resend code</string>
    <string name="linked_phone_number">Linked Phone number</string>
    <string name="receive_sms_alerts_on_your_monthly_invoice">Receive sms alerts on your monthly invoice</string>
    <string name="chat_with_a_representative">Chat with a representative</string>
    <string name="reminder">Reminder</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="edit_information_on_your_profile">Edit information on your profile</string>
    <string name="view_and_update_reminder_list">View and update reminder list</string>
    <string name="enquire_and_have_someone_reach_out_to_you">Enquire and have someone reach out to you</string>
    <string name="home">Home</string>
    <string name="scanner">Scanner</string>
    <string name="inventory">Inventory</string>
    <string name="profile">Profile</string>
    <string name="manage_your_inventory">Manage your Inventory</string>
    <string name="track_your_products">Track your products, get notified when you’re running out of stock.</string>
    <string name="add_new_product">Add new product</string>
    <string name="set_up_your_profile">Setup your profile</string>
    <string name="tell_us_basic_information_about_you_to_serve_your_better">Tell us basic information about you to serve your better!</string>
    <string name="search_transactions">Search transactions</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="account_details">Account Details</string>
    <string name="view_all">View all</string>
    <string name="sales">Sales</string>
    <string name="request_money">Request Money</string>
    <string name="expenses">Expenses</string>
    <string name="send_money">Send Money</string>
    <string name="save">Save</string>
    <string name="product_name">Product name *</string>
    <string name="cost_price">Cost price *</string>
    <string name="selling_price">Selling price *</string>
    <string name="quantity">Quantity</string>
    <string name="select_unit">Select unit *</string>
    <string name="item_image_optional">Item image (optional)</string>
    <string name="add_item_image">Add Item Image</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="service_name">Service name *</string>
    <string name="service_charge">Service charge *</string>
    <string name="stock_value">Stock value</string>
    <string name="items">Items</string>
    <string name="scan_item">Scan item code</string>
    <string name="scan_the_barcode_below">Scan the barcode below to upload your records</string>
    <string name="click_to_scan">Click to scan</string>
    <string name="cashbook">Cashbook</string>
    <string name="debts">Debts</string>
    <string name="this_month">This month</string>
    <string name="money_in">Money In</string>
    <string name="money_out">Money Out</string>
    <string name="all_transactions_of_expenses">All transactions of expenses and incomes will display here once you add them.</string>
    <string name="record_a_transaction">Record A Transaction</string>
    <string name="record_expenses_here">Record expenses here</string>
    <string name="record_income_here">Record income here</string>
    <string name="collect_debts_quickly">Collect Debts Quickly</string>
    <string name="now_you_can">Now you can track and recover debts from customers and suppliers! Add your debtors and creditors below.</string>
    <string name="add_new_person">Add new person</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bookeet</string>
    <string name="nav_header_subtitle">teampacify937@gmail.com</string>
    <string name="nav_header_desc">Bookeet by pacify</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="invoice">Invoice</string>
    <string name="bookkeeping">BookKeeping</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_invoice">Search invoice</string>
    <string name="invoice_list">Invoice list</string>
    <string name="amount">Amount *</string>
    <string name="customer_name">Customer name *</string>
    <string name="date">Date *</string>
    <string name="invoice_number">Invoice number *</string>
    <string name="item_name">Item name</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="create_new_invoice">Create new invoice</string>
    <string name="create_invoice">Create invoice</string>
    <string name="amount_received">Amount received *</string>
    <string name="you_have_no_invoice">You have no invoice</string>
    <string name="create_new_request">Create New Request</string>
    <string name="select_contact_to_request">Select contact to request</string>
    <string name="sent_requests">Sent requests</string>
    <string name="remind">Remind</string>
    <string name="narration">Narration</string>
    <string name="bank">Bank *</string>
    <string name="account_number">Account number *</string>
    <string name="required_field">Required field</string>
    <string name="min_amount_send">You can send less than ₦100</string>
    <string name="account_name">Account name *</string>
    <string name="bvn">Bvn</string>
    <string name="password">Password *</string>
    <string name="email_address">Email address *</string>
    <string name="update_profile">Update profile</string>
    <string name="pin">Pin *</string>
    <string name="edit_item">Edit Item</string>
    <string name="save_changes">Save changes</string>
    <string name="min_name">Your name is too short</string>
    <string name="sold">Sold</string>
    <string name="attach_customer">Attach customer</string>
    <string name="_1">1</string>
    <string name="save_qr_code">Save Qrcode</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search_reminders">Search reminders</string>
    <string name="create_new_reminder">Create new reminder</string>
    <string name="in_stock">In Stock</string>
    <string name="transactions">Transactions</string>
    <string name="recent_sales">Recent sales</string>
    <string name="paid">Paid</string>
    <string name="on_credit">On credit</string>
    <string name="you_have_no_requests">You have no requests</string>
    <string name="search_sales">Search sales</string>
    <string name="you_have_no_sales">You have no sales</string>
    <string name="savings_bal">Savings bal</string>
    <string name="ask_us_something">Ask us something</string>
    <string name="hi_am_happy_to_assist_you">Hi, am happy to assist you!</string>
    <string name="you_have_no_transactions">You have no transactions</string>
    <string name="create_a_virtual_account">Create a virtual account</string>
    <string name="spend_save_transfer_receive_bookkeep_your_business_cashflow">Spend, save, transfer, receive, bookkeep your business cashflow.</string>
    <string name="create_account">Create account</string>
</resources>