<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="@+id/create"
    app:layout_constraintTop_toBottomOf="@+id/divider3"
    tools:context=".ui.createinvoice.steps.CreateInvoiceStepTwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/light_gray"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextStyle16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_received"
                android:textColor="@color/text_title" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/TextStyle18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textColor="@color/text_title"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioGroup
            android:id="@+id/paymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/cash"
                style="@style/TextStyle16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@string/cash"
                android:textColor="@color/text_title"
                android:textStyle="bold" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/cheque"
                style="@style/TextStyle16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@string/cheque"
                android:textColor="@color/text_title"
                android:textStyle="bold" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/bankTransfer"
                style="@style/TextStyle16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@string/bank_transfer"
                android:textColor="@color/text_title"
                android:textStyle="bold" />


        </RadioGroup>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
