<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.qrcode.found.ItemFoundFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextStyle20"
        app:titleTextColor="@color/text_title" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/attachCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <TextView
            android:id="@+id/question"
            style="@style/TextStyle16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/increment"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="4dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_add_24" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/quantity"
            style="@style/TextStyle32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center"
            android:hint="@string/_1"
            android:inputType="number"
            android:paddingVertical="50dp"
            android:textColor="@color/text_title"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/decrement"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="4dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_horizontal_rule_24" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:selectionRequired="true"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/paid"
                android:textAppearance="@style/TextStyle16" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/on_credit"
                android:textAppearance="@style/TextStyle16" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/sold"
        style="@style/TextStyle16"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/primary_button"
        android:gravity="center"
        android:text="@string/sold"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/attachCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_customer"
        android:textAppearance="@style/TextStyle16"
        app:chipIcon="@drawable/ic_baseline_account_circle_24"
        app:iconStartPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>